Add math support to 去噪扩散概率模型 post

--- a/_posts/2025-04-01-去噪扩散概率模型.md
+++ b/_posts/2025-04-01-去噪扩散概率模型.md
@@ -3,6 +3,7 @@ title: 去噪扩散概率模型
 date: 2024-04-05 10:00:00 +0800
 categories: [深度学习, 生成模型]
 tags: [AIGC, Diffusion]
+math: true
 ---
 
 <h2 align = "center">去噪扩散概率模型</h2>
