Revise traffic obfuscation protocols and documentation
Updated the section on traffic obfuscation protocols, emphasizing the convenience of hysteria2 and providing additional documentation links.

--- a/_posts/2025-05-16-无线设备配置.md
+++ b/_posts/2025-05-16-无线设备配置.md
@@ -27,7 +27,7 @@ tags: [加速, 校园网]
 
    OpenAI与Gemini有严格的IP地址限制，仅仅能访问Google是不够的，必须要有美国或日本的IP方可访问，可以使用Azure的日本节点，其速度极快,但流量费用较贵；也可以使用DigitalOcean的美国节点，速度尚可，优势在于流量费用低廉。因此最佳实践便是使用负载均衡策略平衡二者。
 
-   在访问方面需要对出海流量进行伪装，常见的伪装协议有trojan vless vmess hysteria2等，其中最为便利的是hysteria2，其速度快，延迟低，另外不需要域名，只是在配置SSL证书上需要一番功夫，大概需要几小时学习证书的配置方式以及安装方法，如果拥有域名，可以参考Hysteria2的官方介绍进行安装配置，对acme熟悉的话可以很快搞定。如果不考虑其他因素，只是希望接入海外网络，可以使用vmess，但是需要域名。vmess也有不使用证书的安装方式，但需提防IP被封禁。另外还有不少新协议，可以参考如下文档：
+   在访问方面需要对出海流量进行伪装，常见的伪装协议有trojan vless vmess hysteria2等，其中最为便利的是hysteria2，其速度快，延迟低，另外不需要域名，只是在配置SSL证书上需要一番功夫，大概需要几小时学习证书的配置方式以及安装方法，如果拥有域名，可以参考Hysteria2的官方介绍进行安装配置，对acme熟悉的话可以很快搞定。如果不考虑其他因素，只是希望接入海外网络，可以使用vmess，但是需要域名。vmess也有不使用证书的安装方式，但需提防IP被封禁。另外还有不少新协议，可以参考如下文档：[代理协议介绍](https://hugengrui.github.io/posts/%E4%BB%A3%E7%90%86%E5%8D%8F%E8%AE%AE%E4%BB%8B%E7%BB%8D/)
 
 3. 连接网络需要“无感”
 
